Align the submenu correctly to the top of the menu parent menu item when no border is selected for the menu item

--- a/sass/site/navigation/_primary-menu.scss
+++ b/sass/site/navigation/_primary-menu.scss
@@ -100,6 +100,14 @@
 
 }
 
+.main-header-menu {
+	ul {
+		ul{
+			top: 0px;
+		}
+	}
+}
+
 .submenu-with-border {
 	ul {
 		border-top: 1px solid $color-border-submenu;
@@ -108,6 +116,7 @@
 			border: 1px solid $color-border-submenu;
 			border-top: 0;
 		}
+
 		ul{
 			top: -1px;
 		}
